# modular-AR-based-personalized-shopping-experience

./: .gitignore  README.md
rust-shopping-ar/bindings/node/: node.rs
rust-shopping-ar/bindings/python/: python.rs
rust-shopping-ar/bindings/wasm/: wasm.rs
rust-shopping-ar/core-lib/: Cargo.toml
rust-shopping-ar/core-lib/src/: ai.rs  bindings.rs  lib.rs  rendering.rs  vision.rs
rust-shopping-ar/core-lib/src/ffi/react-native/: lib.rs
rust-shopping-ar/tests/: demo.rs
rust-shopping-ar/ui/src/: main.rs
