[package]
name = "ar_shopping"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
pyo3 = { version = "0.20", features = ["extension-module"] }
napi = { version = "2", features = ["napi6"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
opencv = "0.78"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
bevy = "0.12"



[features]
node = []
python = []
wasm = []
